--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.80.0",
     "@yudiel/react-qr-scanner": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.548.0",
+    "lucide-react": "^0.553.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
+    "react-dropzone": "^14.3.8",
     "react-leaflet": "^5.0.0-rc.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
